<resources>
    <string name="app_name">WidgetsTask</string>
    <string name="txt_login">Login</string>
    <string name="str_email">Email</string>
    <string name="str_edtenteremail">Enter your Email</string>
    <string name="str_pwd">Password</string>
    <string name="str_enterpwd">Enter your Password</string>
    <string name="str_submit">Submit</string>
    <string name="str_clear">clear</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="str_name">Name :</string>
    <string name="str_entername">Enter your name</string>
    <string name="designation">Designation :</string>
    <string name="str_write">Write</string>
    <string name="str_add">Add</string>
    <string name="str_gender">Gender :</string>
    <string name="str_male">Male</string>
    <string name="str_female">Female</string>
    <string name="str_hobbies">Hobbies :</string>
    <string name="str_read">Read</string>
    <string name="str_header">Header</string>
    <string name="welcome_nto_ntest">Welcome\nTo\nTest</string>
    <string name="str_errorname">Name length should be at least 4 characters</string>
    <string name="str_errDesig">Select Designation</string>
    <string name="err_selectdes">Select  your designation</string>
    <string name="err_slecthobby">Select at least 1 hobby</string>
    <string name="err_gender">Select your gender</string>
    <string name="err_nameempty">Name Cannot be empty</string>
    <string name="err_pwd">Password length should be at least 4 characters</string>
    <string name="err_email">Enter Correct Email</string>
    <string name="str_enterdob">Enter D.O.B :</string>
    <string name="enter_end_date">Enter end date:</string>
    <string name="str_exit">Do you really want to add this data</string>
    <string name="str_strattime">enter start time</string>
    <string name="str_timevalid">Selected time is valid</string>
    <string name="str_invalid">Selected time is Invalid</string>
    <string name="str_updateuser">Update User</string>
</resources>