<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.LogoutFragment">

    <TextView
        android:id="@+id/txt_dob"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/purple_700"
        android:layout_marginTop="50dp"
        android:layout_marginStart="20dp"
        android:text="@string/str_enterdob"/>

    <EditText
        android:id="@+id/start_date"
        android:focusable="false"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginHorizontal="30dp"
        android:layout_toEndOf="@id/txt_dob" />

    <TextView
        android:id="@+id/txt_enddob"
        android:layout_below="@id/txt_dob"
        android:textColor="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/enter_end_date"/>

    <EditText
        android:id="@+id/end_date"
        android:layout_below="@+id/start_date"
        android:textColor="@color/purple_700"
        android:textColorHint="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        android:focusable="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginHorizontal="20dp"
        android:layout_toEndOf="@id/txt_enddob" />

    <Button
        android:id="@+id/btn_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/edt_endtime"
        android:layout_marginTop="10dp"
        android:text="@string/str_submit"/>
    <Button
        android:id="@+id/btn_submit2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple_700"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/end_date"
        android:layout_marginTop="10dp"
        android:text="@string/str_submit"/>

    <TextView
        android:id="@+id/txt_time"
        android:layout_below="@id/btn_submit2"
        android:textColor="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="20dp"
        android:text="@string/str_strattime"/>

    <EditText
        android:id="@+id/edt_starttime"
        android:focusable="false"
        android:textColor="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        android:layout_below="@id/btn_submit2"
        android:layout_marginTop="20dp"
        android:layout_marginHorizontal="20dp"
        android:layout_toEndOf="@id/txt_time" />

    <TextView
        android:id="@+id/txt_endtime"
        android:layout_below="@id/txt_time"
        android:textColor="@color/purple_700"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:text="@string/enter_end_date"/>

    <EditText
        android:id="@+id/edt_endtime"
        android:layout_below="@id/txt_time"
        android:focusable="false"
        android:textColorHint="@color/purple_700"
        android:backgroundTint="@color/purple_700"
        android:textColor="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginHorizontal="25dp"
        android:layout_toEndOf="@id/txt_endtime" />




</RelativeLayout>